# SM-AutoGen

./: README.md  config.py  config.yaml  main.py  pyproject.toml  test.py
agents/: client.py  developer.py
models/: interfaces.py
